# rp2350

./: .gitignore  README.md  prep_pico2_full_env.sh
riscv_blinky/: CMakeLists.txt  main.c
